[gd_scene load_steps=5 format=3 uid="uid://jyxgvahhmewy"]

[ext_resource type="Script" path="res://towers/towers/sniper.gd" id="1_ysv2g"]
[ext_resource type="Texture2D" uid="uid://1dlamtkj2e3n" path="res://images/sniper.png" id="2_b47du"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4xvhm"]
radius = 56.3028

[sub_resource type="CircleShape2D" id="CircleShape2D_q6mcy"]
radius = 5000.0

[node name="sniper" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 10
collision_mask = 3
script = ExtResource("1_ysv2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("CircleShape2D_4xvhm")

[node name="Sniper" type="Sprite2D" parent="."]
position = Vector2(4, -21)
texture = ExtResource("2_b47du")

[node name="Marker2D" type="Marker2D" parent="Sniper"]
position = Vector2(29.5, -69)

[node name="noticeArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="noticeArea"]
shape = SubResource("CircleShape2D_q6mcy")

[node name="shootDelay" type="Timer" parent="."]

[connection signal="body_entered" from="noticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="noticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="shootDelay" to="." method="_on_shoot_delay_timeout"]
